--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "require": {
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.5.*"
+    },
     "autoload": {
         "psr-4": {
             "MyApp\\": ["src/"]
